Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -182,6 +182,7 @@ header {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -289,10 +290,10 @@ footer h4 {
   float: right;
   position: relative;
   background-color: transparent;
+  width: 75%;
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
